--- a/src/stylesFCI.css
+++ b/src/stylesFCI.css
@@ -1,24 +1,103 @@
-.contGM{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.contFM {
+  height: 80vh;
+}
+.contGM {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  font-size: 12px;
   background-color: rgb(210, 210, 210);
+  height: 100%;
 }
-.hourM {
-  font-size: 10px;
-  margin:auto auto 0 10px;
+.compGroup {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+  color: #393e46;
+  background: #eeeeee;
 }
+
+.compGroup:hover {
+  background-color: #e2e1e1;
+}
+
+.groupComponent {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  border-top: gray solid 1px;
+  text-align: start;
+  width: 80%;
+  height: 100%;
+  padding: 10px 10px 10px 0;
+}
+button div.groupComponent:first-child {
+  border-top: none;
+  background: #000;
+}
+.contentNew {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+.infoGroup {
+  text-align: center;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+}
+.contFilter {
+  padding: 8px;
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.newMessages {
+  text-align: center;
+  font-weight: 600;
+  font-size: 12px;
+  padding: 0.3em 0.5em 0.4em 0.5em;
+  border-radius: 1.5em;
+  background-color: #25a892;
+  display: inline-block;
+  min-width: 0.9em;
+  min-height: 1em;
+  color: var(--unread-marker-text);
+  line-height: 1em;
+  vertical-align: top;
+  color: white;
+}
+
 .contAgo {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
   width: max-content !important;
   margin: 20px auto 20px auto !important;
   padding: 5px;
   border-radius: 5px;
-  box-shadow:-2px 6px 15px 2px rgba(0,0,0,0.31);
+  box-shadow: -2px 6px 15px 2px rgba(0, 0, 0, 0.31);
+  background-color: #25a892;
 }
-.contM::-webkit-scrollbar:vertical{
+
+.contM::-webkit-scrollbar:vertical {
   border-radius: 10px;
   background-color: #863232;
-
 }
-/* bottom: 3rem;
-  right: 16.66666665;*/
+
 .contM {
   position: relative;
   display: flex;
@@ -27,72 +106,234 @@
   align-items: flex-start;
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 73vh;
+  height: 66.5vh;
+  width: 100%;
+  background-color: rgb(210, 210, 210);
+}
+.mainCont {
+  position: relative;
+  z-index: 1;
+  flex: 1 1 0;
+  order: 2;
+}
+
+.contMVoid {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   width: 100%;
   background-color: rgb(210, 210, 210);
 }
 
-.contFM {
-  height: 6vh;
-}
 .contMessageSecond {
   width: 100%;
   display: flex;
   flex-flow: column-reverse nowrap;
-  scroll-behavior: auto;
 }
-
-.mensajeRigth {
-  right: 0px;
+.Rigth {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
   width: max-content;
+}
+.mensajeRigth {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: max-content;
   margin-left: auto;
-  margin-right: 0;
-  background-color: #393e46;
-  padding: 4px;
+  margin-right: 6px;
+  background-color: #25a892;
+  padding: 4px 4px 4px 8px;
   border-radius: 5px;
   margin-bottom: 5px;
-  box-shadow:0px 5px 9px 2px rgba(0,0,0,0.35);
+  box-shadow: 0px 5px 9px 2px rgba(0, 0, 0, 0.35);
+}
+
+.mensajeRigth:hover .selectAccion {
+
+  display: block;
+}
+.mensajeLeft:hover .selectAccion {
+  display: block;
+}
+.mensajeLeft:hover .elementHidden {
+  visibility: hidden;
+}
+.mensajeRigth:hover .elementHidden {
+  visibility: hidden;
+}
+
+.contIcontCurrent {
+  text-align: center;
+  font-size: 9px;
+  padding-left: 5px;
+}
+.selectAccion {
+  position: absolute;
+  text-align: center;
+}
+.contOptionMessage {
+  background-color: white;
+  color: #393e46;
+  position: absolute;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 0;
+  visibility: hidden;
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  border-radius: 5%;
+  display: flex;
+  opacity: 0;
+  transition: width .4s, opacity .8s;
+  z-index: 1000;
+ 
+}
+.contOptionMessage li{
+  width: 100%;
+}
+.contOptionMessage li span {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.contOptionMessage li:hover{
+  background-color: rgb(240, 238, 238);
 }
 .mR {
   display: flex;
   flex-flow: column wrap;
   width: max-content;
-  overflow: inherit;
 }
 .mI {
   display: flex;
+  flex-flow: column wrap;
   width: max-content;
 }
-
+.nameUser {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  width: max-content;
+}
+.contenidoH {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.contH {
+  width: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.hourM {
+  font-size: 10px;
+  margin-top: 0.5rem;
+  padding-left: 5px;
+}
 .mensajeLeft {
-  color: #393e46;
+  position: relative;
+  color: white;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
   width: max-content;
-  margin-left: 0;
+  margin-left: 6px;
   margin-right: auto;
-  background-color:white;
   border-radius: 5px;
   padding: 4px;
   margin-bottom: 5px;
-  box-shadow: 3px 5px 9px 2px rgba(0,0,0,0.35);
+  box-shadow: 3px 5px 9px 2px rgba(0, 0, 0, 0.35);
+}
+.mensajeLeft b {
+  font-size: 12px;
 }
 
-.contAgo {
+.formMessage {
+  padding: 5px;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  width: auto;
-  max-width: 100vw;
-  margin: auto;
-  background-color: rgb(172, 165, 165);
+}
+.contInsideM {
+  padding: 3px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.inputContM {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  outline-style: none;
+}
+.reply {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  border-left: 5px solid #25a892;
+  background-color: rgba(0, 0, 0, 0.31);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 5px;
+  overflow: hidden;
+}
+.insideReply {
+  width: 95%;
+}
+.contReply {
+  width: 100%;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  padding-right: 5px;
+}
+
+.reply p {
+  padding: 3px;
+}
+
+.showReply {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  border-left: 5px solid #899ab3;
+  background-color: rgba(54, 53, 53, 0.3);
+  border-radius: 10px;
+  padding: 5px;
+}
+.showReply b {
+  color: white;
+}
+.showReply p {
+  color: #bebebe;
+}
+.scrollBottom {
+  position: relative;
+  width: 100%;
 }
 @media only screen and (min-width: 768px) {
   .mensajeRigth {
